--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
     Quote! <textarea class='form-control' type='text' name='quote'></textarea>
 </div>    
 <div class="col s12 m6 l3"> 
-    <input class= "btn" type="submit" value="Submit">
+    <input class= "btn green" type="submit" value="Submit">
 </div>
 <div class="col s12 m6 l3"> 
-  <a href="/main" role="button">To the Quotes</a>
+  <a class="btn green" href="/main" role="button">To the Quotes</a>
 </div>   
 </div>
  </form>
