--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,7 +12,7 @@
 
   <% for (var i in quotes) { %>
   <div class="card">
-  	<div class="card-content green">
+  	<div class="card-content grey darken-1">
   		<span class="white-text">
     <h3>quote: <%= quotes[i].quote %> </h3>
     <p>name: <%= quotes[i].name %> </p>
@@ -21,6 +21,13 @@
 </div>
     <!-- <hr> -->
   <% } %>
+
+<div class="col s12 m6 l3"> 
+  <a class="btn green" href="/" role="button">Back Home</a>
 </div>  
+
+
+</div>  
+
 </body>
 </html>
